--- a/test/balls.html
+++ b/test/balls.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Meta Balls</title>
+    <title>Generative model</title>
     <link rel="stylesheet" href="./css/style.css">
     <script type="text/javascript" src="../dep/paper/dist/paper-full.js"></script>
     <script type="text/paperscript" canvas="canvas">
