--- a/test/index.html
+++ b/test/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Generative model</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../dep/paper/dist/paper-full.js"></script>
-    <script type="text/paperscript" src="../assets/js/culture.js" canvas="canvas"></script>
-    <script type="text/javascript" src="../assets/js/markov.js"></script>
+    <script type="text/paperscript" src="assets/js/culture.js" canvas="canvas"></script>
+    <script type="text/javascript" src="assets/js/markov.js"></script>
 
 </head>
 <body>
