--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./dep/paper/dist/paper-full.js"></script>
-    <script type="text/paperscript" src="./assets/js/culture.js" canvas="canvas"></script>
+    <script type="text/paperscript" src="./assets/js/metaball.js" canvas="canvas" ></script>
     <script type="text/javascript" src="./assets/js/markov.js"></script>
 
 </head>
@@ -14,4 +14,5 @@
     <div id="generated_title"></div>
     <canvas id="canvas" resize></canvas>
 </body>
+<script type="text/paperscript" src="./assets/js/culture.js" canvas="canvas" ></script>
 </html>
