--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="title"><span>Closest variant: </span><span id="generated_title"></span></div>
     <div id="percent"><span id="generated_percent"></span><span>% similarity</div>
     <canvas id="canvas" resize></canvas>
+    <a id="library" href="http://library.metagenome.club">Visit the Library</a>
 </body>
 <script type="text/paperscript" src="./assets/js/culture.js" canvas="canvas" ></script>
 </html>
