--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="title"><span>Closest variant: </span><span id="generated_title"></span></div>
     <div id="percent"><span id="generated_percent"></span><span>% similarity</div>
+    <a id="name" href="#">Name me</a>
     <canvas id="canvas" resize></canvas>
     <a id="library" href="http://library.metagenome.club">Visit the Library</a>
 </body>
