--- a/port-test/index.html
+++ b/port-test/index.html
@@ -13,7 +13,7 @@
       #messages li:nth-child(odd) { background: #eee; }
     </style>
   </head>
-  
+
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script>
   var socket = io().connect("http://node-metagenome.rhcloud.com:3000");
@@ -21,7 +21,7 @@
   <body>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" /><button>Push</button>
     </form>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
