--- a/port-test/index.html
+++ b/port-test/index.html
@@ -18,7 +18,7 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Push</button>
     </form>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="http://node-metagenome.rhcloud.com:8000/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var socket = io().connect("http://node-metagenome.rhcloud.com:8000");
