--- a/port-test/index.html
+++ b/port-test/index.html
@@ -16,7 +16,7 @@
   <body>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Push</button>
+      <input id="m" autocomplete="off" /><button>Send</button>
     </form>
     <script src="http://node-metagenome.rhcloud.com:8000/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
