update port test to corrext connection

--- a/port-test/index.html
+++ b/port-test/index.html
@@ -21,7 +21,7 @@
     <script src="http://node-metagenome.rhcloud.com:8000/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      var socket = io().connect("http://node-metagenome.rhcloud.com:8000");
+      var socket = io("http://node-metagenome.rhcloud.com:8000");
       $('form').submit(function(){
         socket.emit('chat message', $('#m').val());
         $('#m').val('');
