rename port test, add css

--- a/schema/index.html
+++ b/schema/index.html
@@ -4,7 +4,7 @@
     <title>Socket.IO chat</title>
     <script src="http://node-metagenome.rhcloud.com:8000/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-    <link rel="stylesheet" type="text/css" href="/styles/json.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/json.css">
     <script>
     function output(inp) {
       if (document.body.getElementsByTagName('pre').length >= 1){
