--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./dep/paper/dist/paper-full.js"></script>
     <script type="text/javascript" src="./assets/js/markov.js"></script>
+    <script type="text/javascript" src="./assets/js/markov.js"></script>
     <script type="text/paperscript" src="./assets/js/metaball.js" canvas="canvas" ></script>
+    <script src="http://node-metagenome.rhcloud.com:8000/socket.io/socket.io.js"></script>
+
+    <script>
+
+
+    var socket = io('http://node-metagenome.rhcloud.com:8000');
+
+    socket.on('change state', function(obj){
+        state_change = true;
+        server = obj;
+    });
+
+    </script>
 
 </head>
 <body>
